fixes for css and alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: Verdana;
   background-color: black;
+  color: white;
 }
 
 .soon {
